# libprocxx

./: LICENSE  README.adoc  build.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/benchmark/mt/: CMakeLists.txt  thread_pool_bmgen.py
src/libprocxx/: CMakeLists.txt  config.hxx.in
src/libprocxx/container/: queue.hxx  sliding_window.hxx  slots.hxx
src/libprocxx/io/: CMakeLists.txt  event_loop.cxx  event_loop.hxx  file_descriptor.cxx  file_descriptor.hxx  pipe.cxx  pipe.hxx  socket.hxx
src/libprocxx/logging/: CMakeLists.txt  file_processor.cxx  file_processor.hxx  json_formatter.cxx  json_formatter.hxx  logger.cxx  logger.hxx  ostream_processor.hxx  plain_formatter.cxx  plain_formatter.hxx
src/libprocxx/meta/: function.hxx  macro.hxx  scope.hxx
src/libprocxx/mt/: scheduler.hxx  thread_pool.hxx  utils.hxx
src/libprocxx/stats/: controller.hxx  utils.hxx
src/libprocxx/stereotype/: prod_cons.hxx
src/unit_test/: CMakeLists.txt
src/unit_test/container/: CMakeLists.txt  slots.cxx
src/unit_test/io/: CMakeLists.txt  event_loop.cxx  sockaddr.cxx  tcp_server.cxx
src/unit_test/logging/: CMakeLists.txt  aio.cxx  json.cxx  json_validate  json_validate.py  plain.cxx
src/unit_test/meta/: CMakeLists.txt  scope.cxx
src/unit_test/mt/: CMakeLists.txt  thread_pool.cxx
